# chip8

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
include/: cpu.h  display.h  loader.h  tools.h
src/: cpu.cpp  display.cpp  loader.cpp  main.cpp  tools.cpp
